# hKask

./: .env.example  .gitignore  AGENTS.md  BRIEF.md  CI-CHANGES.md  CODE_REDUNDANCY_ANALYSIS.md  CONTINUATION-CONDENSER.md  CONTINUATION-PROMPT.md  CONTINUATION.md  CONTINUATION_PROMPT.md  Cargo.toml  E1_verification_report.md  E2_config_change_report.md  E3_intermediate_rank_report.md  E4_dependency_block_report.md  HANDOFF.md  LICENSE  OPEN_QUESTIONS.md  README.md  REGISTRY_AUDIT_REPORT.md  SESSION-25.md  audit_registry.py  bughunt-media-2026-06-22.json  deny.toml  embed-mashups.sh  embed-twain.sh  env.example  feedback.md  fix_serve.py  generate_audit_report.py  handoff-2026-07-17.md  handoff-sequential-review.md  hask.db  hemingway-semantic.db.salt  hinkal-common-0.2.37.tgz  hkask-fowler-audit-continuation-v2.md  hkask-fowler-audit-continuation.md  hkask-handoff-session.md  hkask-markitdown-polish-handoff.md  hkask-remediation-handoff.md  (+13 more)
crates/hkask-acp/: Cargo.toml  README.md
crates/hkask-acp/src/: cloud.rs  lib.rs  main.rs  main_impl.rs  protocol.rs
crates/hkask-acp/tests/: e2e.rs  e2e_inference.rs  integration.rs
crates/hkask-adapter/: Cargo.toml  README.md
crates/hkask-adapter/src/: adapter_config.rs  adapter_port.rs  adapter_router.rs  adapter_store.rs  endpoint_lifecycle.rs  expertise.rs  lib.rs  provider_cost.rs
crates/hkask-adapter/tests/: live_adapter.rs
crates/hkask-agents/: Cargo.toml  README.md
crates/hkask-agents/src/: acp.rs  bot.rs  capabilities.rs  capability.rs  consent.rs  curator.rs  error.rs  escalation.rs  hhh_gate.rs  inference_loop.rs  lib.rs  loop_system.rs  ocap.rs  pod.rs  prompt_analysis.rs  registry_loader.rs  replicant.rs  revocation_store.rs  security.rs  sovereignty.rs  transport.rs  yaml_parser.rs  yaml_types.rs
crates/hkask-agents/tests/: agent_pod_integration.rs  agent_pod_integration.rs.skip  integration_depth.rs  pod_portability.rs
crates/hkask-api/: Cargo.toml  README.md
crates/hkask-api/src/: email.rs  energy.rs  ensemble.rs  error.rs  gas.rs  git_cas.rs  governed_tool.rs  lib.rs  loop_system.rs  openapi.rs  openapi_spec.rs  routes.rs  soap_config.rs  stores.rs
crates/hkask-api/tests/: integration.rs  integration_e2e.rs  soap_inference_tests.rs
crates/hkask-capability/: Cargo.toml  README.md
crates/hkask-capability/src/: auth.rs  lib.rs  resources.rs  token_types.rs  tokens.rs  tool_port.rs
crates/hkask-capability/tests/: capability_contract.rs  kani_harnesses.rs
crates/hkask-ci-invariants/: Cargo.toml  invariants.toml
crates/hkask-ci-invariants/src/: main.rs
crates/hkask-cli/: Cargo.toml  README.md
crates/hkask-cli/src/: archival.rs  bootstrap.rs  commands.rs  curation_config.rs  error.rs  errors.rs  experience.rs  git_archival.rs  lib.rs  main.rs  onboarding.rs  onboarding_session.rs  registration.rs  repl.rs  repl_host.rs  russell_mapper.rs  transcript_viewer.rs
crates/hkask-cli/tests/: cli_fuzz.rs
crates/hkask-cns/: Cargo.toml  README.md
crates/hkask-cns/fuzz/: Cargo.toml
crates/hkask-cns/proptest-regressions/: energy.txt
crates/hkask-cns/src/: acp_alert_sender.rs  acp_span.rs  algedonic.rs  algedonic_escalation.rs  api_metering.rs  bot_metrics.rs  calibrated_energy_estimator.rs  calibrator.rs  circuit_breaker.rs  cns_store_slo_provider.rs  composite_energy_estimator.rs  composite_gas_estimator.rs  contract_discipline.rs  contract_events.rs  contract_span.rs  curator_budget_policy.rs  cybernetics_loop.rs  dampener.rs  dynamic_gas_table.rs  energy.rs  energy_budget_management.rs  gas_budget_management.rs  gas_report.rs  goal_variety.rs  goal_verifier.rs  governed_inference.rs  governed_tool.rs  inference_estimator.rs  inference_loop.rs  infra_span.rs  kill_zone.rs  lib.rs  prompt_decomposition.rs  rate_limit.rs  regulation_policy.rs  review_queue.rs  runtime.rs  runtime_policy.rs  seam_span.rs  seam_types.rs  (+22 more)
crates/hkask-cns/tests/: cns_feedback_loop_integration.rs  gas_report_calibrate_integration.rs  goal_capability_cybertests.rs  governed_tool_integration.rs  regulation_pipeline_integration.rs  spans_cybertests.rs  (+1 more)
crates/hkask-codegraph/: Cargo.toml  README.md
crates/hkask-communication/: Cargo.toml  README.md
crates/hkask-condenser/: Cargo.toml  README.md
crates/hkask-corpus-ingest/: Cargo.toml  README.md
crates/hkask-cybertest/: Cargo.toml
crates/hkask-database/: Cargo.toml  README.md
crates/hkask-ensemble/: Cargo.toml
crates/hkask-fal/: Cargo.toml  README.md
crates/hkask-federation/: Cargo.toml  README.md
crates/hkask-git-cas/: Cargo.toml  README.md
crates/hkask-goal/: Cargo.toml  README.md
crates/hkask-guard/: Cargo.toml  README.md
crates/hkask-identity/: Cargo.toml  README.md
crates/hkask-improv/: Cargo.toml  README.md
crates/hkask-inference/: Cargo.toml  README.md
crates/hkask-keystore/: Cargo.toml  README.md
crates/hkask-ledger/: Cargo.toml  README.md
crates/hkask-mcp-cloud-gateway/: Cargo.toml  README.md
crates/hkask-mcp-server/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: capability_token.rs  manifest_yaml.rs  template_j2.rs
hkask-testing/: Cargo.toml
hkask-testing/docs/: SEMANTIC_MAP.md
hkask-testing/integration-tests/: chaos_integration.rs  chaos_tests.rs  cli_api_symmetry.rs  cli_tests.rs  cns_ensemble_tests.rs  ensemble_tests.rs  mod.rs  sovereignty_tests.rs  storage_memory_integration.rs  template_tests.rs  templates_agents_tests.rs
hkask-testing/src/: lib.rs
hkask-testing/test-harnesses/: fixtures.rs  mock_okapi.rs  mocks.rs  mod.rs  temp_dirs.rs
hkask-testing/unit-tests/: adapter_tests.rs  composition_tests.rs  consent_tests.rs  ensemble_unit_tests.rs  error_tests.rs  hkask_agents_tests.rs  hkask_api_tests.rs  hkask_cli_tests.rs  hkask_cns_tests.rs  hkask_ensemble_tests.rs  hkask_keystore_tests.rs  hkask_mcp_inference_tests.rs  hkask_mcp_tests.rs  hkask_memory_tests.rs  hkask_storage_tests.rs  hkask_templates_tests.rs  hkask_types_tests.rs  mcp_adapter_tests.rs  ocap_tests.rs  pod_tests.rs  security_tests.rs  sovereignty_observer_tests.rs  sovereignty_tests.rs  storage_sovereignty_tests.rs  templates_unit_tests.rs
(+4196 files in other folders)
