[workspace]
resolver = "2"
members = [
    # Core crates (13 — ≤35k lines total)
    "crates/hkask-services-core",
    "crates/hkask-services-backup",
    "crates/hkask-services-kata",
    "crates/hkask-services-kanban",
    "crates/hkask-services-classify",
    "crates/hkask-services-embed",
    "crates/hkask-services-discover",
    "crates/hkask-services-wallet",
    "crates/hkask-services-onboarding",
    "crates/hkask-services-verification",
    "crates/hkask-services-skill",
    "crates/hkask-services-lifecycle",
    "crates/hkask-services-sovereignty",
    "crates/hkask-services-inference-svc",
    "crates/hkask-services-daemon",
    "crates/hkask-services-context",
    "crates/hkask-condenser",
    "crates/hkask-types",
    "crates/hkask-inference",
    "crates/hkask-services",
    "crates/hkask-storage",
    "crates/hkask-memory",
    "crates/hkask-cns",
    "crates/hkask-templates",
    "crates/hkask-agents",
    "crates/hkask-keystore",
    "crates/hkask-wallet",
    "crates/hkask-mcp",
    "crates/hkask-cli",
    "crates/hkask-api",
    "crates/hkask-improv",
    "crates/hkask-communication",
    "crates/hkask-test-harness",
    "crates/hkask-adapter",
    "crates/hkask-acp",
    # Fuzz targets
    "crates/hkask-types/fuzz",
    "crates/hkask-cns/fuzz",
    "crates/hkask-inference/fuzz",
    "crates/hkask-wallet/fuzz",
    "crates/hkask-storage/fuzz",
    "crates/hkask-templates/fuzz",
    "crates/hkask-memory/fuzz",
    "crates/hkask-services-core/fuzz",
    "crates/hkask-improv/fuzz",
    "crates/hkask-mcp/fuzz",
    # MCP servers
    "mcp-servers/hkask-mcp-condenser",
    "mcp-servers/hkask-mcp-research",
    "mcp-servers/hkask-mcp-companies",
    "mcp-servers/hkask-mcp-communication",
    "mcp-servers/hkask-mcp-media",
    "mcp-servers/hkask-mcp-spec",
    "mcp-servers/hkask-mcp-memory",
    "mcp-servers/hkask-mcp-docproc",
    "mcp-servers/hkask-mcp-training",
    "mcp-servers/hkask-mcp-replica",
    "mcp-servers/hkask-mcp-kanban",
    # MCP server fuzz targets
    "mcp-servers/hkask-mcp-kanban/fuzz",
    "mcp-servers/hkask-mcp-communication/fuzz",
    "mcp-servers/hkask-mcp-companies/fuzz",
    "mcp-servers/hkask-mcp-condenser/fuzz",
    "mcp-servers/hkask-mcp-docproc/fuzz",
    "mcp-servers/hkask-mcp-media/fuzz",
    "mcp-servers/hkask-mcp-memory/fuzz",
    "mcp-servers/hkask-mcp-replica/fuzz",
    "mcp-servers/hkask-mcp-research/fuzz",
    "mcp-servers/hkask-mcp-spec/fuzz",
    "mcp-servers/hkask-mcp-training/fuzz",
]

[workspace.package]
version = "0.30.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mdz-axo/hKask"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.51", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP / API
axum = { version = "0.8", features = ["ws"] }
utoipa = { version = "5.5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"

# MCP protocol (tool protocol)
rmcp = "1"

# Agent Client Protocol (IDE ↔ agent communication)
agent-client-protocol = "0.14"

# Storage
rusqlite = { version = "0.39", features = ["bundled-sqlcipher", "blob", "backup"] }
sqlite-vec = "0.1"

# Cryptography / Hashing
blake3 = "1"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
hex = { version = "0.4", features = ["serde"] }
subtle = "2"

# Git
gix = "0.81"

# Templating
minijinja = { version = "2", features = ["loader", "serde", "json", "internal_safe_search"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_neo = "0.11"
schemars = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4", "v5", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
imageproc = "0.25"
ab_glyph = "0.2"
nom-exif = "3"
walkdir = "2"

# Keychain / Secrets
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }

# HTTP client (for MCP servers)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

tempfile = "3"
async-trait = "0.1"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Fuzzing
bolero = "0.13"

# Pattern matching (for migration)
regex = "1"

# Proc-macro support
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# Futures utilities
futures-util = "0.3"
async-stream = "0.3"

# WebSocket (Chrome DevTools Protocol)
tokio-tungstenite = "0.26"

# URL parsing
url = "2"

# Environment file loading
dotenvy = "0.15"

# Matrix protocol
matrix-sdk = { version = "0.16", default-features = false, features = ["native-tls"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("solana", "hedera", "hinkal"))'] }

# Fuzz profile for cargo-bolero libfuzzer (requires nightly)
[profile.fuzz]
inherits = "release"
debug = 1
codegen-units = 1
