[workspace]
resolver = "2"
members = [
    # Core crates
    "crates/hkask-database",
    "crates/hkask-services-core",
    "crates/hkask-services-self-heal",
    "crates/hkask-services-verification",
    "crates/hkask-goal",

    # Ontology bridge crates (v0.31.0)
    "crates/hkask-bridge-dublincore",
    "crates/hkask-bridge-pko",
    "crates/hkask-bridge-golem",
    "crates/hkask-bridge-fibo",
    "crates/hkask-bridge-eso",
    "crates/hkask-services-kata-kanban",
    "crates/hkask-services-runtime",
    "crates/hkask-services-corpus",
    "crates/hkask-services-wallet",
    "crates/hkask-services-onboarding",
    "crates/hkask-services-skill",
    "crates/hkask-services-context",
    "crates/hkask-services-chat",
    "crates/hkask-services-compose",
    "crates/hkask-services-research",
    "crates/hkask-condenser",
    "crates/hkask-types",
    "crates/hkask-forecast",
    "crates/hkask-capability",
    "crates/hkask-ports",
    "crates/hkask-wallet-types",
    "crates/hkask-inference",
    "crates/hkask-guard",
    "crates/hkask-storage-core",
    "crates/hkask-storage",
    "crates/hkask-memory",
    "crates/hkask-cns",
    "crates/hkask-templates",
    "crates/hkask-agents",
    "crates/hkask-keystore",
    "crates/hkask-ledger",
    "crates/hkask-wallet",
    "crates/hkask-mcp",
    "crates/hkask-git-cas",
    "crates/hkask-repl",
    "crates/hkask-cli",
    "crates/hkask-tui",
    "crates/hkask-api",
    "crates/hkask-improv",
    "crates/hkask-communication",
    "crates/hkask-test-harness",
    "crates/hkask-adapter",
    "crates/hkask-acp",
    "crates/hkask-federation",
    "crates/hkask-mcp-cloud-gateway",
    "crates/hkask-codegraph",
    "crates/hkask-storage-guard",
    # MCP servers
    "mcp-servers/hkask-mcp-condenser",
    "mcp-servers/hkask-mcp-research",
    "mcp-servers/hkask-mcp-companies",
    "mcp-servers/hkask-mcp-communication",
    "mcp-servers/hkask-mcp-media",
    "mcp-servers/hkask-mcp-memory",
    "mcp-servers/hkask-mcp-docproc",
    "mcp-servers/hkask-mcp-training",
    "mcp-servers/hkask-mcp-replica",
    "mcp-servers/hkask-mcp-kata-kanban",
    "mcp-servers/hkask-mcp-skill",
    "mcp-servers/hkask-mcp-curator",
    "mcp-servers/hkask-mcp-filesystem",
    "mcp-servers/hkask-mcp-codegraph",
    "mcp-servers/hkask-mcp-scenarios",
]

[workspace.package]
version = "0.31.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mdz-axo/hKask"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.51", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP / API
axum = { version = "0.8", features = ["ws"] }
utoipa = { version = "5.5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"

# MCP protocol (tool protocol)
# Feature sets vary per crate — see individual Cargo.toml docs.
#  server                    — core MCP types and tool registration
#  macros                    — #[tool] derive macro
#  transport-io              — stdio/SSE transport for standalone servers
#  client                    — MCP client (runtime only)
#  transport-child-process   — spawn + communicate with child MCP servers (runtime only)
rmcp = "1"

# Storage
rusqlite = { version = "0.39", features = ["bundled-sqlcipher", "blob", "backup"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"

# Cryptography / Hashing
blake3 = "1"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
hex = { version = "0.4", features = ["serde"] }
subtle = "2"

# Templating
minijinja = { version = "2", features = ["loader", "serde", "json", "internal_safe_search"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_neo = "0.11"
schemars = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4", "v5", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
imageproc = { version = "0.27", default-features = false, features = ["rayon", "text"] }
walkdir = "2"

# Keychain / Secrets
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }

# HTTP client (for MCP servers)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

tempfile = "3"
async-trait = "0.1"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Pattern matching (for migration)
regex = "1"

# Futures utilities
futures-util = "0.3"
async-stream = "0.3"

# URL parsing
url = "2"

# Environment file loading
dotenvy = "0.15"

# Matrix protocol
matrix-sdk = { version = "0.16", default-features = false, features = ["rustls-tls"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("hedera"))'] }
