[package]
name = "hkask-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test harnesses and integration tests for hKask (excluded from LOC budget)"
publish = false

[dependencies]
hkask-types = { path = "../crates/hkask-types" }
hkask-storage = { path = "../crates/hkask-storage" }
hkask-memory = { path = "../crates/hkask-memory" }
hkask-cns = { path = "../crates/hkask-cns" }
hkask-templates = { path = "../crates/hkask-templates" }
hkask-agents = { path = "../crates/hkask-agents" }
hkask-ensemble = { path = "../crates/hkask-ensemble" }
hkask-keystore = { path = "../crates/hkask-keystore" }
hkask-mcp = { path = "../crates/hkask-mcp" }
hkask-api = { path = "../crates/hkask-api" }
hkask-cli = { path = "../crates/hkask-cli" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
async-trait.workspace = true
rand.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta = { workspace = true, features = ["yaml", "json"] }
proptest.workspace = true

[[test]]
name = "integration_tests"
path = "integration-tests/mod.rs"

[[test]]
name = "chaos_integration"
path = "integration-tests/chaos_integration.rs"

[[test]]
name = "template_tests"
path = "integration-tests/template_tests.rs"

[[test]]
name = "cli_tests"
path = "integration-tests/cli_tests.rs"

[[test]]
name = "hkask_types_tests"
path = "unit-tests/hkask_types_tests.rs"

[[test]]
name = "hkask_storage_tests"
path = "unit-tests/hkask_storage_tests.rs"

[[test]]
name = "hkask_memory_tests"
path = "unit-tests/hkask_memory_tests.rs"

[[test]]
name = "hkask_cns_tests"
path = "unit-tests/hkask_cns_tests.rs"

[[test]]
name = "hkask_templates_tests"
path = "unit-tests/hkask_templates_tests.rs"

[[test]]
name = "hkask_agents_tests"
path = "unit-tests/hkask_agents_tests.rs"

[[test]]
name = "hkask_ensemble_tests"
path = "unit-tests/hkask_ensemble_tests.rs"

[[test]]
name = "hkask_keystore_tests"
path = "unit-tests/hkask_keystore_tests.rs"

[[test]]
name = "hkask_mcp_tests"
path = "unit-tests/hkask_mcp_tests.rs"

[[test]]
name = "hkask_api_tests"
path = "unit-tests/hkask_api_tests.rs"

[[test]]
name = "hkask_cli_tests"
path = "unit-tests/hkask_cli_tests.rs"
