[package]
name = "hkask-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test harnesses and integration tests for hKask (excluded from LOC budget)"
publish = false

[dependencies]
hkask-types = { path = "../crates/hkask-types" }
hkask-storage = { path = "../crates/hkask-storage" }
hkask-memory = { path = "../crates/hkask-memory" }
hkask-cns = { path = "../crates/hkask-cns" }
hkask-templates = { path = "../crates/hkask-templates" }
hkask-agents = { path = "../crates/hkask-agents" }
hkask-ensemble = { path = "../crates/hkask-ensemble" }
hkask-keystore = { path = "../crates/hkask-keystore" }
hkask-mcp = { path = "../crates/hkask-mcp" }
hkask-api = { path = "../crates/hkask-api" }
hkask-cli = { path = "../crates/hkask-cli" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
async-trait.workspace = true
rand.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta = { workspace = true, features = ["yaml", "json"] }
proptest.workspace = true
assert_cmd = "2.0"

[[test]]
name = "integration_tests"
path = "integration-tests/mod.rs"

[[test]]
name = "chaos_integration"
path = "integration-tests/chaos_integration.rs"

[[test]]
name = "cli_tests"
path = "integration-tests/cli_tests.rs"

[[test]]
name = "cns_ensemble_tests"
path = "integration-tests/cns_ensemble_tests.rs"

[[test]]
name = "sovereignty_tests"
path = "integration-tests/sovereignty_tests.rs"

[[test]]
name = "ensemble_tests"
path = "integration-tests/ensemble_tests.rs"

[[test]]
name = "adapter_tests"
path = "unit-tests/adapter_tests.rs"

[[test]]
name = "composition_tests"
path = "unit-tests/composition_tests.rs"

[[test]]
name = "consent_tests"
path = "unit-tests/consent_tests.rs"

[[test]]
name = "ensemble_unit_tests"
path = "unit-tests/ensemble_unit_tests.rs"

[[test]]
name = "error_tests"
path = "unit-tests/error_tests.rs"

[[test]]
name = "hkask_ensemble_tests"
path = "unit-tests/hkask_ensemble_tests.rs"

[[test]]
name = "hkask_mcp_inference_tests"
path = "unit-tests/hkask_mcp_inference_tests.rs"

[[test]]
name = "hkask_memory_tests"
path = "unit-tests/hkask_memory_tests.rs"

[[test]]
name = "mcp_adapter_tests"
path = "unit-tests/mcp_adapter_tests.rs"

[[test]]
name = "ocap_tests"
path = "unit-tests/ocap_tests.rs"

[[test]]
name = "pod_tests"
path = "unit-tests/pod_tests.rs"

[[test]]
name = "security_tests"
path = "unit-tests/security_tests.rs"

[[test]]
name = "sovereignty_observer_tests"
path = "unit-tests/sovereignty_observer_tests.rs"

[[test]]
name = "storage_sovereignty_tests"
path = "unit-tests/storage_sovereignty_tests.rs"

[[test]]
name = "templates_unit_tests"
path = "unit-tests/templates_unit_tests.rs"
