[package]
name = "hkask-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test harnesses and integration tests for hKask (excluded from LOC budget)"
publish = false

[dependencies]
hkask-types = { path = "../crates/hkask-types" }
hkask-storage = { path = "../crates/hkask-storage" }
hkask-memory = { path = "../crates/hkask-memory" }
hkask-cns = { path = "../crates/hkask-cns" }
hkask-templates = { path = "../crates/hkask-templates" }
hkask-agents = { path = "../crates/hkask-agents" }
hkask-ensemble = { path = "../crates/hkask-ensemble" }
hkask-keystore = { path = "../crates/hkask-keystore" }
hkask-mcp = { path = "../crates/hkask-mcp" }
hkask-api = { path = "../crates/hkask-api" }
hkask-cli = { path = "../crates/hkask-cli" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
async-trait.workspace = true
rand.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta = { workspace = true, features = ["yaml", "json"] }
proptest.workspace = true
assert_cmd = "2.0"
