[package]
name = "hkask-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trained adapter lifecycle — adapter store, expertise, endpoint lifecycle, provider cost model"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-ports = { path = "../hkask-ports" }
hkask-capability = { path = "../hkask-capability" }
hkask-database = { path = "../hkask-database" }
	hkask-storage-core = { path = "../hkask-storage-core" }
	hkask-inference = { path = "../hkask-inference" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
dotenvy.workspace = true
r2d2_sqlite.workspace = true

[[test]]
name = "live_adapter"
path = "tests/live_adapter.rs"
