[package]
name = "hkask-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent pods, ACP, and bot/replicant management for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-cns = { path = "../hkask-cns" }
hkask-keystore = { path = "../hkask-keystore" }
hkask-storage = { path = "../hkask-storage" }
hkask-templates = { path = "../hkask-templates" }
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
rmcp.workspace = true
gix.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
zeroize.workspace = true
rand.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
