[package]
name = "hkask-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent pods, ACP, and bot/replicant management for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-cns = { path = "../hkask-cns" }
hkask-keystore = { path = "../hkask-keystore" }
hkask-storage = { path = "../hkask-storage" }
hkask-memory = { path = "../hkask-memory" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
hex.workspace = true
uuid.workspace = true
zeroize.workspace = true
rusqlite.workspace = true
tokio-util.workspace = true
