[package]
name = "hkask-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API with utoipa OpenAPI for hKask"

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-ports = { path = "../hkask-ports" }
hkask-capability = { path = "../hkask-capability" }
hkask-agents = { path = "../hkask-agents" }
hkask-templates = { path = "../hkask-templates" }
hkask-mcp = { path = "../hkask-mcp" }
hkask-cns = { path = "../hkask-cns" }
hkask-keystore = { path = "../hkask-keystore" }
hkask-storage = { path = "../hkask-storage" }
hkask-memory = { path = "../hkask-memory" }
hkask-services = { path = "../hkask-services" }
hkask-services-sovereignty = { path = "../hkask-services-sovereignty" }
hkask-services-core = { path = "../hkask-services-core" }
hkask-services-cloud = { path = "../hkask-services-cloud" }
hkask-services-backup = { path = "../hkask-services-backup" }
hkask-wallet = { path = "../hkask-wallet" }
hkask-wallet-types = { path = "../hkask-wallet-types" }
ed25519-dalek.workspace = true
hex.workspace = true
axum.workspace = true
reqwest = { workspace = true, features = ["json"] }
base64.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_neo.workspace = true
thiserror.workspace = true
async-stream.workspace = true
futures-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
uuid.workspace = true
chrono.workspace = true
subtle.workspace = true

[dev-dependencies]
proptest = "1"
