[package]
name = "hkask-ci-invariants"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CI invariant gates — single-pass configurable invariant checker for hKask"

[[bin]]
name = "hkask-ci-invariants"
path = "src/main.rs"

[dependencies]
hkask-types = { path = "../hkask-types" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
regex.workspace = true
walkdir.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
