[package]
name = "hkask-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI commands for hKask"

[[bin]]
name = "kask"
path = "src/main.rs"

[features]
default = ["tui", "communication", "api"]
tui = ["hkask-tui", "ratatui", "crossterm"]
communication = ["hkask-communication"]
api = ["hkask-api", "axum"]

[dependencies]
hkask-types = { path = "../hkask-types" }
hkask-ports = { path = "../hkask-ports" }
hkask-capability = { path = "../hkask-capability" }
hkask-agents = { path = "../hkask-agents" }
hkask-federation = { path = "../hkask-federation" }
hkask-templates = { path = "../hkask-templates" }
hkask-storage = { path = "../hkask-storage" }
hkask-mcp = { path = "../hkask-mcp" }
hkask-cns = { path = "../hkask-cns" }
hkask-api = { path = "../hkask-api", optional = true }
hkask-inference = { path = "../hkask-inference" }
hkask-test-harness = { path = "../hkask-test-harness" }
hkask-wallet = { path = "../hkask-wallet" }
hkask-memory = { path = "../hkask-memory" }
hkask-improv = { path = "../hkask-improv" }
hkask-communication = { path = "../hkask-communication", optional = true }
hkask-keystore = { path = "../hkask-keystore" }
hkask-services = { path = "../hkask-services" }
hkask-services-runtime = { path = "../hkask-services-runtime" }
hkask-services-core = { path = "../hkask-services-core" }
hkask-services-kanban = { path = "../hkask-services-kanban" }
hkask-ledger = { path = "../hkask-ledger" }
rmcp.workspace = true
axum = { workspace = true, optional = true }
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_neo.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
base64.workspace = true
minijinja.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
zeroize.workspace = true
rand.workspace = true
hex.workspace = true
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
anyhow.workspace = true
futures-util.workspace = true
rustyline = "18.0.0"
hkask-tui = { path = "../hkask-tui", optional = true }
dirs = "6"
rpassword = "7"
dotenvy.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest = "1"
